# rust-basekit

./: .gitignore  Cargo.toml  README.md
benches/: README.md  mod.rs
benches/base16/: mod.rs
benches/base16/decode/: decode_impl.rs  decode_into.rs  mod.rs
benches/base16/decode_into_bench/: main.rs
benches/base16/encode/: encode_impl.rs  encode_into.rs
benches/base16/encode_into_bench/: main.rs
benches/base32/: mod.rs
benches/base32/decode/: decode_impl.rs  decode_into.rs
benches/base32/decode_into_bench/: main.rs
benches/base32/encode/: encode_impl.rs  encode_into.rs
benches/base32/encode_into_bench/: main.rs
benches/base64/: decode.rs  encode.rs  mod.rs
benches/base64/decode/: decode_impl.rs  decode_into.rs  mod.rs  v1.rs
benches/base64/decode_into_bench/: main.rs
benches/base64/encode/: encode_impl.rs  encode_into.rs  mod.rs  v1.rs
benches/base64/encode_into_bench/: main.rs
src/: cpu.rs  cpu_features.rs  lib.rs  utils.rs
src/base16/: config.rs  consts.rs  error.rs  mod.rs
src/base16/decode/: decode_full_groups_into.rs  decode_impl.rs  decode_into.rs  mod.rs  output.rs
src/base16/encode/: encode_full_group_into.rs  encode_full_groups_into.rs  encode_impl.rs  encode_into.rs  mod.rs  output.rs
src/base32/: config.rs  consts.rs  error.rs  mod.rs
src/base32/decode/: decode_full_group_into.rs  decode_full_groups_into.rs  decode_impl.rs  decode_into.rs  decode_tail_into.rs  mod.rs  output.rs
src/base32/encode/: encode_full_group_into.rs  encode_full_groups_into.rs  encode_impl.rs  encode_into.rs  encode_tail_into.rs  mod.rs  output.rs
src/base64/: config.rs  consts.rs  decode.rs  encode.rs  error.rs  mod.rs
tests/: mod.rs
tests/base16/: mod.rs  roundtrip.rs  roundtrip_lowercase.rs
tests/base32/: mod.rs  roundtrip.rs  roundtrip_no_padding.rs
tests/base64/: decode.rs  encode.rs  mod.rs  roundtrip.rs  roundtrip_no_padding.rs  roundtrip_url_safe.rs
tests/common/: base16.rs  base32.rs  base64.rs  mod.rs
(+73 files in other folders)
