[package]
name = "basekit"
version = "0.1.0"
authors = ["WatchDG <baranov@w3m.co>"]
license = "MIT OR Apache-2.0"
description = "Universal library for encoding in various bases"
homepage = "https://github.com/WatchDG/rust-basekit"
documentation = "https://docs.rs/basekit"
repository = "https://github.com/WatchDG/rust-basekit"
readme = "README.md"
edition = "2024"

[dependencies]
