[package]
name = "basekit"
version = "0.2.0"
authors = ["WatchDG <baranov@w3m.co>"]
license = "MIT OR Apache-2.0"
description = "Universal library for encoding in various bases"
homepage = "https://github.com/WatchDG/rust-basekit"
documentation = "https://docs.rs/basekit"
repository = "https://github.com/WatchDG/rust-basekit"
readme = "README.md"
edition = "2024"
exclude = [".trae/**", "benches/**", "tests/**"]

[features]
simd-sse3 = []

[dependencies]

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "mod"
harness = false
