[package]
name = "basekit"
version = "0.2.0"
authors = ["WatchDG <baranov@w3m.co>"]
license = "MIT OR Apache-2.0"
description = "Universal library for encoding in various bases"
homepage = "https://github.com/WatchDG/rust-basekit"
documentation = "https://docs.rs/basekit"
repository = "https://github.com/WatchDG/rust-basekit"
readme = "README.md"
edition = "2024"
exclude = [".trae/**", "benches/**", "tests/**"]

[features]
simd-ssse3   = []
simd-avx2    = []
simd-avx512  = []

[dependencies]

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "mod"
harness = false

[[bench]]
name = "base64_encode_into_bench"
path = "benches/base64/encode_into_bench/main.rs"
harness = false

[[bench]]
name = "base32_encode_into_bench"
path = "benches/base32/encode_into_bench/main.rs"
harness = false

[[bench]]
name = "base16_encode_into_bench"
path = "benches/base16/encode_into_bench/main.rs"
harness = false
